Move tile creation buttons to sidebar. Append application resources.

--- a/Avalonia.Tiels/App.axaml
+++ b/Avalonia.Tiels/App.axaml
@@ -4,4 +4,7 @@
     <Application.Styles>
         <FluentTheme Mode="Light"/>
     </Application.Styles>
+    <Application.Resources>
+        <Color x:Key="BaseBorderColor">#CFCFCF</Color>
+    </Application.Resources>
 </Application>
