--- a/Avalonia.Tiels/Controls/SidebarCategory.axaml
+++ b/Avalonia.Tiels/Controls/SidebarCategory.axaml
@@ -6,7 +6,7 @@
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="150"
              x:Class="Avalonia.Tiels.Controls.SidebarCategory">
     <Border BorderThickness="0,1,0,0" BorderBrush="{StaticResource BaseBorderColor}">
-        <TextBlock Margin="0,5,0,0" Foreground="#666666" TextAlignment="Center" 
+        <TextBlock Margin="0,5,0,0" Foreground="{StaticResource BaseTitleColor}" TextAlignment="Center" 
                    Text="{Binding Title, RelativeSource={RelativeSource AncestorType={x:Type controls:SidebarCategory}}}"/>
     </Border>
 </UserControl>
