--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -4,6 +4,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.Tiels.TileWindow"
-        Title="TileWindow">
-    Welcome to Avalonia!
+        TransparencyLevelHint="Transparent"
+        Title="TileWindow" Opened="OnLoad">
+    <Grid>
+        <Grid.Background><SolidColorBrush Color="#55000000"/></Grid.Background>
+        <Grid x:Name="EditBar"></Grid>
+    </Grid>
 </Window>
