--- a/Avalonia.Tiels/MessageWindow.axaml
+++ b/Avalonia.Tiels/MessageWindow.axaml
@@ -5,6 +5,6 @@
         mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="150"
         x:Class="Avalonia.Tiels.MessageWindow"
         Height="150" Width="400"
-        Title="Info">
+        Title="Info" Opened="OnOpened" WindowStartupLocation="CenterScreen">
     <TextBlock x:Name="MessageText" Margin="10" Text="No text to show."/>
 </Window>
