--- a/Avalonia.Tiels/SettingsWindow.axaml
+++ b/Avalonia.Tiels/SettingsWindow.axaml
@@ -66,7 +66,15 @@
                                 <StackPanel Margin="10">
                                         <TextBlock FontSize="16" Margin="0,0,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.SettingsLabel}"/>
                                         <Label Content="{x:Static p:Resources.DefaultTilesDirectory}"/>
-                                        <TextBox x:Name="TilesDirectoryBox" Margin="0,0,0,10" KeyUp="TilePathTextBoxChanged"></TextBox>
+                                        <TextBox x:Name="TilesDirectoryBox" Margin="0,0,0,10" KeyUp="TilePathTextBoxChanged"/>
+                                        <Label Content="{x:Static p:Resources.LanguageSelection}"/>
+                                        <ComboBox x:Name="LanguageBox" Margin="0,0,0,10" HorizontalAlignment="Stretch" SelectionChanged="LanguageChanged">
+                                                <ComboBox.ItemTemplate>
+                                                        <DataTemplate>
+                                                                <TextBlock Text="{Binding DisplayName}"/>
+                                                        </DataTemplate>
+                                                </ComboBox.ItemTemplate>
+                                        </ComboBox>
                                         <CheckBox x:Name="AutostartCheckBox" Content="{x:Static p:Resources.AutostartEnabled}"/>
                                         <CheckBox x:Name="HideWindowCheckBox" Content="{x:Static p:Resources.HideAtStartup}"/>
                                         <CheckBox x:Name="EffectsCheckBox"><WrapPanel>
